--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint .",
-    "test": "npm run editorconfig"
+    "test": "npm run editorconfig",
+    "start": "gulp go",
+    "build": "gulp less"
   },
   "editorconfig-cli": [
     "*.json",
@@ -16,10 +18,18 @@
     "type": "git",
     "url": "git+https://github.com/romeo198808/Pink.git"
   },
-  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/romeo198808/Pink/issues"
   },
-  "homepage": "https://github.com/romeo198808/Pink#readme"
+  "homepage": "https://github.com/romeo198808/Pink#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "autoprefixer": "^9.6.1",
+    "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
+    "gulp-less": "^4.0.1",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0"
+  }
 }
