--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "autoprefixer": "^9.6.1",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
+    "gulp-cwebp": "^3.0.0",
+    "gulp-imagemin": "^6.0.0",
     "gulp-less": "^4.0.1",
     "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^8.0.0"
+    "gulp-postcss": "^8.0.0",
+    "gulp-svgo": "^2.1.1"
   }
 }
